# garbage-codes-season-02

./: .gitignore  frontendInterviewQues.md  learning_decorators.py  learning_generators.py  pyproject.toml
Django stuffs/BhartiyNaukri Backend/: README.md  TODO.md  makefile  manage.py
Django stuffs/BhartiyNaukri Backend/BNproj/: urls.py
Django stuffs/BhartiyNaukri Backend/core/: admin.py  models.py  signals.py  views.py
Django stuffs/BhartiyNaukri Backend/jobs/: admin.py  permissions.py  serializers.py  views.py
Django stuffs/DjangoTaskProj/Main/: settings.py
Django stuffs/DjangoTaskProj/taskApi/: models.py  serializers.py  urls.py  views.py
Django stuffs/EcommProj/core/: models.py
Django stuffs/EcommProj/django_rest_app/: asgi.py  urls.py
Django stuffs/EcommProj/store/: permissions.py  serializers.py
Django stuffs/EcommProj/tags/: admin.py
Django stuffs/StudentManagement/Main/: settings.py
Django stuffs/Techzy Blogs/: manage.py  readme.MD
Django stuffs/beSocial/: manage.py  readme.MD
DjangoProj/BhartiyNaukri Backend/: TODO.md  makefile  project-requirements.md
DjangoProj/DjangoTaskProj/: makefile
DjangoProj/EcommProj/: db.sqlite3  makefile
DjangoProj/Techzy Blogs/: readme.MD
DjangoProj/beSocial/: makefile
FrontEnd stuffs/HTML/: containers.html  head.html  images.html  index.html  lists.html
FrontEnd stuffs/HTML & CSS/: learn.md
FrontEnd stuffs/HTML CSS part-2/: index.html
python exercises/: que01.py  que_02.py  que_03.py  que_05.py
python exercises/github repo problems/: que_02.py  que_03.py  que_04.py
(+336 files in other folders)
